Bug 316697 - Appearance dialog font size change with mousewheel up/down doesn't change values
Summary: Appearance dialog font size change with mousewheel up/down doesn't change values
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.10.1
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-14 02:08 UTC by Alexey
Modified: 2017-06-16 00:04 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexey 2013-03-14 02:08:46 UTC
Using scroller on top of slider doesn't change font values but changes slider position.

Reproducible: Always

Steps to Reproduce:
1.open appearance configuration
2.scroll above font settings
3....
4.profit
Actual Results:  
slider moves, values stays

Expected Results:  
values change
Comment 1 Laurent Montel 2013-03-14 06:43:19 UTC
I confirm it
it's a bug in kdelibs I think.
Will look at.
Comment 2 Laurent Montel 2013-03-14 07:07:35 UTC
Git commit ab82bbc9554023c5ee288fc45038fdf35f947c4c by Montel Laurent.
Committed on 14/03/2013 at 08:07.
Pushed by mlaurent into branch 'KDE/4.10'.

Fix Bug 316697 - Appearance dialog font size change with mousewheel up/down doesn't change values

FIXED-IN: 4.10.2

M  +7    -0    akregator/configuration/akregator_config_appearance.cpp

http://commits.kde.org/kdepim/ab82bbc9554023c5ee288fc45038fdf35f947c4c