Fix Bug 316697 - Appearance dialog font size change with mousewheel up/down doesn't change values

FIXED-IN: 4.10.2
BUG: 316697