configuration/akregator_config_appearance.cpp
@@ -53,10 +53,17 @@ KCMAkregatorAppearanceConfig::KCMAkregatorAppearanceConfig( QWidget* parent, con
              m_ui.lbl_newArticles, SLOT(setEnabled(bool)) );
     connect( m_ui.kcfg_UseCustomColors, SIGNAL(toggled(bool)),
              m_ui.lbl_unreadArticles, SLOT(setEnabled(bool)) );
+
+    connect( m_ui.slider_minimumFontSize, SIGNAL(valueChanged(int)),
+             m_ui.kcfg_MinimumFontSize , SLOT(setValue(int)) );
+    connect( m_ui.slider_mediumFontSize, SIGNAL(valueChanged(int)),
+             m_ui.kcfg_MediumFontSize , SLOT(setValue(int)) );
+
     connect( m_ui.slider_minimumFontSize, SIGNAL(sliderMoved(int)),
              m_ui.kcfg_MinimumFontSize , SLOT(setValue(int)) );
     connect( m_ui.slider_mediumFontSize, SIGNAL(sliderMoved(int)),
              m_ui.kcfg_MediumFontSize , SLOT(setValue(int)) );
+
     connect( m_ui.kcfg_MinimumFontSize, SIGNAL(valueChanged(int)),
              m_ui.slider_minimumFontSize, SLOT(setValue(int)) );
     connect( m_ui.kcfg_MediumFontSize, SIGNAL(valueChanged(int)),
